Adding functions to modify result page

--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -78,7 +78,7 @@
     </div> -->
 
     <!-- <script src="../js/index.js"></script> -->
-    <script src="../../node_modules/typewriter-effect/dist/core.js"></script>
+    <script src="../js/core.js"></script>
     <script type="text/javascript">
       var typEl = document.getElementById("typ");
       const typewriter = new Typewriter(typEl, {
