--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -11,8 +11,9 @@
     <div id="typ-intro"></div>
     <div id="typ-gen"></div>
 
-    <script src="../../node_modules/typewriter-effect/dist/core.js"></script>
+    <script src="../js/core.js"></script>
     <script type="text/javascript">
+      const { ipcRenderer } = require("electron");
       var h1El = document.getElementById("typ-h1");
       var introEl = document.getElementById("typ-intro");
       var genEl = document.getElementById("typ-gen");
@@ -21,7 +22,8 @@
         delay: "natural",
         // cursor: "▌",
         // cursor: "&#9647;",
-        cursor: "⎕",
+        // cursor: "⎕",
+        cursor: "",
         // skipAddStyles: true,
       });
       const tw2 = new Typewriter(introEl, {
@@ -29,7 +31,8 @@
         delay: "natural",
         // cursor: "▌",
         // cursor: "&#9647;",
-        cursor: "⎕",
+        // cursor: "⎕",
+        cursor: "",
         // skipAddStyles: true,
       });
       const tw3 = new Typewriter(genEl, {
@@ -37,29 +40,40 @@
         delay: "natural",
         // cursor: "▌",
         // cursor: "&#9647;",
-        cursor: "⎕",
+        // cursor: "⎕",
+        cursor: "",
         // skipAddStyles: true,
       });
 
-      tw1
-        .typeString("Article Title")
-        .pauseFor(500)
-        .changeCursor(" ")
-        .callFunction(() => {
-          tw2
-            .typeString("Article Starter")
-            .pauseFor(500)
-            // .changeCursor(" ")
-            .start();
-          tw2
-            .pauseFor(2000)
-            .changeCursor("⎕")
-            .typeString("//Appending to the article starter")
-            .pauseFor(500)
-            .changeCursor(" ")
-            .start();
-        })
-        .start();
+      ipcRenderer.on("change-tw1", (event, arg) => {
+        tw1
+          .changeCursor("⎕")
+          .pauseFor(150)
+          .typeString(arg)
+          .pauseFor(250)
+          .changeCursor(" ")
+          .start();
+      });
+
+      // tw1
+      //   .typeString("Article Title")
+      //   .pauseFor(500)
+      //   .changeCursor(" ")
+      //   .callFunction(() => {
+      //     tw2
+      //       .typeString("Article Starter")
+      //       .pauseFor(500)
+      //       // .changeCursor(" ")
+      //       .start();
+      //     tw2
+      //       .pauseFor(2000)
+      //       .changeCursor("⎕")
+      //       .typeString("//Appending to the article starter")
+      //       .pauseFor(500)
+      //       .changeCursor(" ")
+      //       .start();
+      //   })
+      //   .start();
 
       tw3.changeCursor(" ").start();
     </script>
