Fixed scaling and flushing typewriter output

--- a/src/frames/boilerplate.html
+++ b/src/frames/boilerplate.html
@@ -10,6 +10,7 @@
     <h1>Articles starting with A</h1>
     <div>Some of the articles that start with A:</div>
     <div>Anarchy</div>
-    <div>Anne Boleyn</div>
+    <div>Anchor</div>
+    <div>Antimatter</div>
   </body>
 </html>
