--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -17,38 +17,21 @@
       var h1El = document.getElementById("typ-h1");
       var introEl = document.getElementById("typ-intro");
       var genEl = document.getElementById("typ-gen");
-      const tw1 = new Typewriter(h1El, {
-        loop: false,
-        delay: "natural",
-        // cursor: "▌",
-        // cursor: "&#9647;",
-        cursor: "⎕",
-        // cursor: "",
-        // skipAddStyles: true,
-      });
-      const tw2 = new Typewriter(introEl, {
-        loop: false,
-        delay: "natural",
-        // cursor: "▌",
-        // cursor: "&#9647;",
-        cursor: "⎕",
-        // cursor: "",
-        // skipAddStyles: true,
-      });
-      const tw3 = new Typewriter(genEl, {
-        loop: false,
-        delay: "natural",
-        // cursor: "▌",
-        // cursor: "&#9647;",
-        // cursor: "⎕",
-        cursor: "",
-        // skipAddStyles: true,
-      });
+      var tw1 = null;
+      var tw2 = null;
+      var tw3 = null;
 
       ipcRenderer.on("change-tw1", (event, arg) => {
-        tw1.stop();
+        tw1 = null;
+        tw1 = new Typewriter(h1El, {
+          loop: false,
+          delay: "natural",
+          cursor: "⎕",
+          devMode: true,
+        });
         tw1
-          .deleteAll(1000)
+          // .stop()
+          // .deleteAll(2000)
           .changeCursor("⎕")
           .pauseFor(150)
           .typeString(arg)
@@ -57,9 +40,16 @@
           .start();
       });
       ipcRenderer.on("change-tw2", (event, arg) => {
-        tw2.stop();
+        tw2 = null;
+        tw2 = new Typewriter(introEl, {
+          loop: false,
+          delay: "natural",
+          cursor: "⎕",
+          devMode: true,
+        });
         tw2
-          .deleteAll(1000)
+          // .stop()
+          // .deleteAll(2000)
           .changeCursor("⎕")
           .pauseFor(150)
           .typeString(arg)
@@ -68,9 +58,16 @@
           .start();
       });
       ipcRenderer.on("change-tw3", (event, arg) => {
-        tw3.stop();
+        tw3 = null;
+        tw3 = new Typewriter(genEl, {
+          loop: false,
+          delay: "natural",
+          cursor: "⎕",
+          devMode: true,
+        });
         tw3
-          .deleteAll(1000)
+          // .stop()
+          // .deleteAll(2000)
           .changeCursor("⎕")
           .pauseFor(150)
           .typeString(arg)
@@ -78,6 +75,46 @@
           .changeCursor(" ")
           .start();
       });
+      ipcRenderer.on("change-tw23", (event, arg) => {
+        console.log(arg);
+        tw2 = null;
+        tw3 = null;
+        tw2 = new Typewriter(introEl, {
+          loop: false,
+          delay: "natural",
+          cursor: "⎕",
+          devMode: true,
+        });
+        tw3 = new Typewriter(genEl, {
+          loop: false,
+          delay: "natural",
+          cursor: "⎕",
+          devMode: true,
+        });
+        tw2
+          // .stop()
+          // .deleteAll(2000)
+          .changeCursor("⎕")
+          .pauseFor(150)
+          .typeString(arg[0])
+          .pauseFor(250)
+          .changeCursor(" ")
+          .callFunction(() => {
+            tw3
+              .changeCursor("⎕")
+              .pauseFor(150)
+              .typeString(arg[1])
+              .pauseFor(250)
+              .changeCursor(" ")
+              .start();
+          })
+          .start();
+      });
+      // ipcRenderer.on("clear-tw", (event, arg) => {
+      //   tw1.stop().deleteAll(2000).start();
+      //   tw2.stop().deleteAll(2000).start();
+      //   tw3.stop().deleteAll(2000).start();
+      // });
 
       // tw1
       //   .typeString("Article Title")
@@ -99,7 +136,7 @@
       //   })
       //   .start();
 
-      tw3.changeCursor(" ").start();
+      // tw3.changeCursor(" ").start();
     </script>
   </body>
 </html>
