Removed wikijs dependency

--- a/src/frames/boilerplate.html
+++ b/src/frames/boilerplate.html
@@ -11,6 +11,9 @@
     <div>Some of the articles that start with A:</div>
     <div>Anarchy</div>
     <div>Anchor</div>
+    <div>Anne Boleyn</div>
+    <div>Appellation d'origine contrôlée</div>
     <div>Antimatter</div>
+    <div>Azithromycin</div>
   </body>
 </html>
