--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           style="justify-content: space-between"
           id="mainSearchSection"
         >
-          <label for="findBar">Find in UTP </label>
+          <label for="findBar">Find in Encyclopaedia Mundi </label>
           <input id="findBar" type="text" spellcheck="false" />
           <button id="commitSearch">Search</button>
         </section>
