Starting to implement IPC between webview and renderer

--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -14,9 +14,9 @@
 
     <div class="license-container">
       <h1 id="client">Client</h1>
-<h2 id="source-code">Source Code</h2>
-<h3 id="encyclopaediamundi-client">EncyclopaediaMundi-Client</h3>
-<pre><code>Copyright (c) 2021 Tianyu Ge
+      <h2 id="source-code">Source Code</h2>
+      <h3 id="encyclopaediamundi-client">EncyclopaediaMundi-Client</h3>
+      <pre><code>Copyright (c) 2021 Tianyu Ge
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -24,9 +24,9 @@ The above copyright notice and this permission notice shall be included in all c
 
 THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code></pre>
-<h2 id="content">Content</h2>
-<h3 id="wikipedia">Wikipedia</h3>
-<pre><code>Creative Commons Attribution-ShareAlike 3.0 Unported License
+      <h2 id="content">Content</h2>
+      <h3 id="wikipedia">Wikipedia</h3>
+      <pre><code>Creative Commons Attribution-ShareAlike 3.0 Unported License
 
      CREATIVE COMMONS CORPORATION IS NOT A LAW FIRM AND DOES NOT PROVIDE LEGAL SERVICES. DISTRIBUTION OF THIS LICENSE DOES NOT CREATE AN ATTORNEY-CLIENT RELATIONSHIP. CREATIVE COMMONS PROVIDES THIS INFORMATION ON AN &quot;AS-IS&quot; BASIS. CREATIVE COMMONS MAKES NO WARRANTIES REGARDING THE INFORMATION PROVIDED, AND DISCLAIMS LIABILITY FOR DAMAGES RESULTING FROM ITS USE.
 
@@ -102,7 +102,7 @@ UNLESS OTHERWISE MUTUALLY AGREED TO BY THE PARTIES IN WRITING, LICENSOR OFFERS T
     Creative Commons may be contacted at https://creativecommons.org/.
 
 </code></pre>
-<pre><code>GNU Free Documentation License
+      <pre><code>GNU Free Documentation License
 
 Version 1.3, 3 November 2008 Copyright (C) 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc. &lt;https://fsf.org/&gt;
 
@@ -258,10 +258,20 @@ If you have Invariant Sections without Cover Texts, or some other combination of
 
 If your document contains nontrivial examples of program code, we recommend releasing these examples in parallel under your choice of free software license, such as the GNU General Public License, to permit their use in free software.
 </code></pre>
-<h3 id="pierre-auguste-renoir-luncheon-of-the-boating-party-1881">Pierre-Auguste Renoir - Luncheon of the Boating Party (1881)</h3>
-<p>Image adapted from <a href="https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg">https://commons.wikimedia.org/wiki/File:Pierre-Auguste<em>Renoir</em>-<em>Luncheon_of_the_Boating_Party</em>-_Google_Art_Project.jpg</a>.</p>
-<p>With digital modification applied (cropping, scaling, and dithering).</p>
-<pre><code>This is a faithful photographic reproduction of a two-dimensional, public domain work of art. The work of art itself is in the public domain for the following reason:
+      <h3 id="pierre-auguste-renoir-luncheon-of-the-boating-party-1881">
+        Pierre-Auguste Renoir - Luncheon of the Boating Party (1881)
+      </h3>
+      <p>
+        Image adapted from
+        <a
+          href="https://commons.wikimedia.org/wiki/File:Pierre-Auguste_Renoir_-_Luncheon_of_the_Boating_Party_-_Google_Art_Project.jpg"
+          >https://commons.wikimedia.org/wiki/File:Pierre-Auguste<em>Renoir</em>-<em>Luncheon_of_the_Boating_Party</em>-_Google_Art_Project.jpg</a
+        >.
+      </p>
+      <p>
+        With digital modification applied (cropping, scaling, and dithering).
+      </p>
+      <pre><code>This is a faithful photographic reproduction of a two-dimensional, public domain work of art. The work of art itself is in the public domain for the following reason:
 Public domain
 
 This work is in the public domain in its country of origin and other countries and areas where the copyright term is the author's life plus 70 years or fewer.
@@ -271,14 +281,30 @@ This file has been identified as being free of known restrictions under copyrigh
 The official position taken by the Wikimedia Foundation is that &quot;faithful reproductions of two-dimensional public domain works of art are public domain&quot;.
 This photographic reproduction is therefore also considered to be in the public domain in the United States. In other jurisdictions, re-use of this content may be restricted; see Reuse of PD-Art photographs for details.
 </code></pre>
-<h3 id="leroy-anderson-and-his-pops-concert-orchestra-the-typewriter-october-1953">Leroy Anderson And His &quot;Pops&quot; Concert Orchestra - The Typewriter (October 1953)</h3>
-<p>Audio adapted from <a href="https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b">https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b</a>.</p>
-<p>With digital modification applied (trimming, noise removal).</p>
-<p>This audio recording was published in October 1953.</p>
-<p><strong>(Not going to use it without reinterpretation, wow the copyright lasts forever)</strong></p>
-<h2 id="fonts">Fonts</h2>
-<h3 id="iosevka">Iosevka</h3>
-<pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
+      <h3
+        id="leroy-anderson-and-his-pops-concert-orchestra-the-typewriter-october-1953"
+      >
+        Leroy Anderson And His &quot;Pops&quot; Concert Orchestra - The
+        Typewriter (October 1953)
+      </h3>
+      <p>
+        Audio adapted from
+        <a
+          href="https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b"
+          >https://archive.org/details/78_the-typewriter_leroy-anderson-and-his-pops-concert-orchestra-leroy-anderson_gbia0013102b</a
+        >.
+      </p>
+      <p>With digital modification applied (trimming, noise removal).</p>
+      <p>This audio recording was published in October 1953.</p>
+      <p>
+        <strong
+          >(Not going to use it without reinterpretation, wow the copyright
+          lasts forever)</strong
+        >
+      </p>
+      <h2 id="fonts">Fonts</h2>
+      <h3 id="iosevka">Iosevka</h3>
+      <pre><code>Copyright 2015-2021, Renzhi Li (aka. Belleve Invis, belleve@typeof.net)
 
 This Font Software is licensed under the SIL Open Font License, Version 1.1.
 
@@ -389,8 +415,8 @@ not met.
     FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
     OTHER DEALINGS IN THE FONT SOFTWARE.
 </code></pre>
-<h3 id="mondwest">Mondwest</h3>
-<pre><code>Personal License Agreement
+      <h3 id="mondwest">Mondwest</h3>
+      <pre><code>Personal License Agreement
 
 Pangram Pangram®
 pangrampangram.com
@@ -406,20 +432,25 @@ Thank you and enjoy!
 
 Mat at Pangram Pangram®
 </code></pre>
-<h3 id="ms-sans-serif">MS Sans Serif</h3>
-<pre><code>The FontStruction “MS Sans Serif”
+      <h3 id="ms-sans-serif">MS Sans Serif</h3>
+      <pre><code>The FontStruction “MS Sans Serif”
 (https://fontstruct.com/fontstructions/show/1384746) by “lou” is licensed
 under a Creative Commons Attribution Share Alike license
 (http://creativecommons.org/licenses/by-sa/3.0/).
 </code></pre>
-<h3 id="ms-sans-serif-bold">MS Sans Serif Bold</h3>
-<pre><code>The FontStruction “MS Sans Serif Bold”
+      <h3 id="ms-sans-serif-bold">MS Sans Serif Bold</h3>
+      <pre><code>The FontStruction “MS Sans Serif Bold”
 (https://fontstruct.com/fontstructions/show/1384862) by “lou” is licensed
 under a Creative Commons Attribution Share Alike license
 (http://creativecommons.org/licenses/by-sa/3.0/).
 </code></pre>
-<h3 id="the-ultimate-oldschool-pc-font-pack-web437_ibm_vga_8x16-web437_phoenixvga_9x14-webplus_toshibasat_8x16">The Ultimate Oldschool PC Font Pack (Web437_IBM_VGA_8x16, Web437_PhoenixVGA_9x14, WebPlus_ToshibaSat_8x16)</h3>
-<pre><code>Attribution-ShareAlike 4.0 International
+      <h3
+        id="the-ultimate-oldschool-pc-font-pack-web437_ibm_vga_8x16-web437_phoenixvga_9x14-webplus_toshibasat_8x16"
+      >
+        The Ultimate Oldschool PC Font Pack (Web437_IBM_VGA_8x16,
+        Web437_PhoenixVGA_9x14, WebPlus_ToshibaSat_8x16)
+      </h3>
+      <pre><code>Attribution-ShareAlike 4.0 International
 
 =======================================================================
 
@@ -849,9 +880,9 @@ Creative Commons may be contacted at creativecommons.org.
 
 
 </code></pre>
-<h2 id="frameworks">Frameworks</h2>
-<h3 id="electron">Electron</h3>
-<pre><code>Copyright (c) 2013-2020 GitHub Inc.
+      <h2 id="frameworks">Frameworks</h2>
+      <h3 id="electron">Electron</h3>
+      <pre><code>Copyright (c) 2013-2020 GitHub Inc.
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
@@ -872,8 +903,8 @@ LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code></pre>
-<h3 id="node.js">Node.js</h3>
-<pre><code>Node.js is licensed for use as follows:
+      <h3 id="node.js">Node.js</h3>
+      <pre><code>Node.js is licensed for use as follows:
 
 &quot;&quot;&quot;
 Copyright Node.js contributors. All rights reserved.
@@ -2455,9 +2486,9 @@ The externally maintained libraries used by Node.js are:
   &quot;&quot;&quot;
 
 </code></pre>
-<h2 id="packages">Packages</h2>
-<h3 id="css">98.css</h3>
-<pre><code>Copyright 2020 Jordan Scales
+      <h2 id="packages">Packages</h2>
+      <h3 id="css">98.css</h3>
+      <pre><code>Copyright 2020 Jordan Scales
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -2465,8 +2496,8 @@ The above copyright notice and this permission notice shall be included in all c
 
 THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code></pre>
-<h3 id="typewriterjs-v2">TypewriterJS v2</h3>
-<pre><code>The MIT License (MIT)
+      <h3 id="typewriterjs-v2">TypewriterJS v2</h3>
+      <pre><code>The MIT License (MIT)
 
 Copyright (c) 2016-2017 Tameem Safi
 
@@ -2488,9 +2519,9 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 </code></pre>
-<h2 id="utilities">Utilities</h2>
-<h3 id="electron-forge">electron-forge</h3>
-<pre><code>The MIT License (MIT)
+      <h2 id="utilities">Utilities</h2>
+      <h3 id="electron-forge">electron-forge</h3>
+      <pre><code>The MIT License (MIT)
 Copyright (c) 2016 Samuel Attard
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
@@ -2510,10 +2541,10 @@ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code></pre>
-<h1 id="server">Server</h1>
-<h2 id="source-code-1">Source Code</h2>
-<h3 id="encyclopaediamundi-server">EncyclopaediaMundi-Server</h3>
-<pre><code>Copyright (c) 2021 Tianyu Ge
+      <h1 id="server">Server</h1>
+      <h2 id="source-code-1">Source Code</h2>
+      <h3 id="encyclopaediamundi-server">EncyclopaediaMundi-Server</h3>
+      <pre><code>Copyright (c) 2021 Tianyu Ge
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -2521,9 +2552,9 @@ The above copyright notice and this permission notice shall be included in all c
 
 THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code></pre>
-<h2 id="frameworks-1">Frameworks</h2>
-<h3 id="flask">Flask</h3>
-<pre><code>Copyright 2010 Pallets
+      <h2 id="frameworks-1">Frameworks</h2>
+      <h3 id="flask">Flask</h3>
+      <pre><code>Copyright 2010 Pallets
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
@@ -2552,8 +2583,8 @@ LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 </code></pre>
-<h3 id="pytorch">PyTorch</h3>
-<pre><code>From PyTorch:
+      <h3 id="pytorch">PyTorch</h3>
+      <pre><code>From PyTorch:
 
 Copyright (c) 2016- Facebook, Inc (Adam Paszke)
 Copyright (c) 2014- Facebook, Inc (Soumith Chintala)
@@ -2627,8 +2658,8 @@ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
 </code></pre>
-<h3 id="transformers">Transformers</h3>
-<pre><code>Copyright 2018- The Hugging Face team. All rights reserved.
+      <h3 id="transformers">Transformers</h3>
+      <pre><code>Copyright 2018- The Hugging Face team. All rights reserved.
 
                                  Apache License
                            Version 2.0, January 2004
@@ -2832,8 +2863,6 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 </code></pre>
-
-
     </div>
   </body>
   <!-- <script>
