Implemented about modal

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
           <span class="menubar-padding">&nbsp;</span>
           <button>Help</button>
           <span class="menubar-padding">&nbsp;</span>
-          <button>About</button>
+          <button id="mainMenuAbout">About</button>
         </div>
         <section
           class="field-row"
