Updated license page

--- a/src/aboutModal.html
+++ b/src/aboutModal.html
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <audio id="la-preloop"><source src="./bin/audio/la-preloop.mp3" /></audio>
+    <audio id="la-loop-noremainder">
+      <source src="./bin/audio/la-loop-noremainder.mp3" />
+    </audio>
+    <audio id="la-loop"><source src="./bin/audio/la-loop.mp3" /></audio>
     <div class="window">
       <div class="title-bar" id="aboutModalTitleBar">
         <div class="title-bar-text">About Encyclopaedia Mundi...</div>
