--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -6,11 +6,7 @@
     <title>LICENSE</title>
   </head>
   <body>
-    <!-- <audio id="la-preloop"><source src="./bin/audio/la-preloop.mp3" /></audio>
-    <audio id="la-loop-noremainder">
-      <source src="./bin/audio/la-loop-noremainder.mp3" />
-    </audio>
-    <audio id="la-loop"><source src="./bin/audio/la-loop.mp3" /></audio> -->
+    
 
     <div class="license-container">
       <h1 id="client">Client</h1>
@@ -2865,6 +2861,7 @@ limitations under the License.
 </code></pre>
     </div>
   </body>
+  <script src="js/licensesplash.js"></script>
   <!-- <script>
     const audioContext = new AudioContext();
     audioContext.crossOrigin = "anonymous";
