--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -9,77 +9,49 @@
   <body>
     <h1>Welcome!</h1>
     <div id="typ">
-      Use the search bar above to retrieve articles pertaining to your interest.
+      <p>Dear Colleagues,</p>
+      <p>Thank you for trying out Encyclopaedia Mundi.</p>
+      <p>
+        While the development is still underway, we are excited to give you an
+        early preview of what it can achieve. Please understand that while we
+        were able to design this software to be fully Y2K-compliant from the
+        ground up, there may still be underlying issues (or &lsquo;bugs&rsquo;,
+        as we say) regarding stability or incomplete data. If you encountered
+        any problem, we&rsquo;d appreciate if you can spare us some time and
+        visit \\encm on Netscape Navigator or Internet Explorer to file a bug
+        report so we can fix it in the near future. Please understand that this
+        Intranet address is only accessible from our internal network. While
+        we&rsquo;re at it, we also kindly ask you NOT to distribute this
+        software to non-employees.
+      </p>
+      <p>
+        As you know, from the potato ricer that you too may have received in
+        lieu of annual bonus to heavy excavators that were used to build part of
+        the magnificant Wardle Canal, Pitchman-Survoy Inc. is known for its
+        dependable household appliances and mechanical industrial products. But
+        people outside of our legal and finance departments are rarely aware
+        that we also have a publishing subdivision. When Pitchman Industries and
+        Survoy Group International proposed a merger eight years ago, U.S.
+        Department of Commerce and Canadian Chamber of Commerce imposed a few
+        conditions for the merger to clear, citing antitrust concerns. One of
+        such requirements is to ensure Thibodeau Publishing, a division of
+        Survoy Group International that reprint rare books, remains operational
+        within the new entity for at least 10 years. While our friends at
+        Thibodeau are immensely proud of their heritage in metal type, we
+        believe that the digital technology will become far more prevalent in
+        the near future. Therefore, we remain hopeful that with a little help
+        and technical know-how from my department, Thibodeau can finally come up
+        with a commerical success and see a turnaround for the first time in
+        their history. (hinting they'll be shut down otherwise)
+      </p>
+      <p>Some instructions on how to use it here</p>
+      <br /><br />
+      Regards,<br />Dave from Technical Evaluation & Advancement
     </div>
-    <!-- <div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Phasellus egestas
-      tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque
-      dignissim enim sit amet venenatis urna cursus. Sit amet commodo nulla
-      facilisi nullam. Odio pellentesque diam volutpat commodo. Eget est lorem
-      ipsum dolor sit amet consectetur adipiscing. Egestas congue quisque
-      egestas diam in arcu cursus euismod. Enim nec dui nunc mattis enim ut
-      tellus elementum. Habitant morbi tristique senectus et netus et malesuada
-      fames. Duis ultricies lacus sed turpis. Mauris a diam maecenas sed enim ut
-      sem viverra. Bibendum arcu vitae elementum curabitur vitae. Proin sagittis
-      nisl rhoncus mattis rhoncus urna neque viverra justo. Ut tristique et
-      egestas quis ipsum suspendisse.
-    </div>
-    <div>
-      Egestas congue quisque egestas diam. Pellentesque elit ullamcorper
-      dignissim cras tincidunt lobortis feugiat vivamus. Cras pulvinar mattis
-      nunc sed blandit. Lacinia quis vel eros donec ac odio tempor orci dapibus.
-      Tortor consequat id porta nibh venenatis cras sed felis eget. Id neque
-      aliquam vestibulum morbi. Ornare arcu dui vivamus arcu felis bibendum ut.
-      Nec ultrices dui sapien eget mi proin sed libero. Viverra nibh cras
-      pulvinar mattis nunc sed blandit libero. Enim nec dui nunc mattis enim ut
-      tellus elementum. Neque vitae tempus quam pellentesque. Congue eu
-      consequat ac felis donec et. Fermentum dui faucibus in ornare. Massa sed
-      elementum tempus egestas sed. Sem integer vitae justo eget magna fermentum
-      iaculis eu.
-    </div>
-    <div>
-      Gravida rutrum quisque non tellus orci ac auctor. Neque ornare aenean
-      euismod elementum nisi quis eleifend quam. Dolor magna eget est lorem
-      ipsum. Massa vitae tortor condimentum lacinia quis vel. Viverra maecenas
-      accumsan lacus vel facilisis volutpat est velit. Feugiat nisl pretium
-      fusce id velit ut tortor. Consequat mauris nunc congue nisi vitae suscipit
-      tellus mauris. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Felis
-      imperdiet proin fermentum leo vel orci. Risus ultricies tristique nulla
-      aliquet enim tortor at. Facilisi nullam vehicula ipsum a arcu.
-    </div>
-    <div>
-      Congue mauris rhoncus aenean vel elit scelerisque. At elementum eu
-      facilisis sed odio morbi quis. Feugiat nisl pretium fusce id velit ut
-      tortor pretium. Dolor sed viverra ipsum nunc aliquet bibendum enim
-      facilisis. Iaculis at erat pellentesque adipiscing commodo elit at
-      imperdiet dui. Sit amet dictum sit amet justo donec enim diam. Magna ac
-      placerat vestibulum lectus mauris ultrices. Vel facilisis volutpat est
-      velit egestas. Donec ac odio tempor orci dapibus ultrices in iaculis.
-      Feugiat nisl pretium fusce id velit ut tortor pretium viverra. At ultrices
-      mi tempus imperdiet nulla malesuada pellentesque. Malesuada proin libero
-      nunc consequat interdum varius sit amet. Quisque id diam vel quam
-      elementum pulvinar etiam non. Condimentum vitae sapien pellentesque
-      habitant morbi. Adipiscing tristique risus nec feugiat in fermentum
-      posuere urna nec. Eu volutpat odio facilisis mauris sit amet massa vitae
-      tortor. Quam nulla porttitor massa id neque aliquam. Turpis massa
-      tincidunt dui ut ornare lectus sit amet est.
-    </div>
-    <div>
-      Sapien pellentesque habitant morbi tristique senectus et netus et
-      malesuada. Est lorem ipsum dolor sit amet consectetur adipiscing elit.
-      Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Quis
-      enim lobortis scelerisque fermentum dui faucibus. Libero justo laoreet sit
-      amet cursus sit. Nullam vehicula ipsum a arcu cursus vitae congue mauris.
-      Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Sem
-      viverra aliquet eget sit amet tellus cras adipiscing enim. Nullam non nisi
-      est sit amet facilisis magna etiam tempor. Euismod nisi porta lorem mollis
-      aliquam ut porttitor leo. Donec enim diam vulputate ut.
-    </div> -->
 
     <!-- <script src="../js/index.js"></script> -->
     <script src="../js/core.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var typEl = document.getElementById("typ");
       const typewriter = new Typewriter(typEl, {
         loop: false,
@@ -101,6 +73,6 @@
         // .pauseFor(2500)
         .changeCursor(" ")
         .start();
-    </script>
+    </script> -->
   </body>
 </html>
