--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -34,15 +34,15 @@
         Survoy Group International proposed a merger eight years ago, U.S.
         Department of Commerce and Canadian Chamber of Commerce imposed a few
         conditions for the merger to clear, citing antitrust concerns. One of
-        such requirements is to ensure Thibodeau Publishing, a division of
-        Survoy Group International that reprint rare books, remains operational
-        within the new entity for at least 10 years. While our friends at
-        Thibodeau are immensely proud of their heritage in metal type, we
-        believe that the digital technology will become far more prevalent in
-        the near future. Therefore, we remain hopeful that with a little help
-        and technical know-how from my department, Thibodeau can finally come up
-        with a commerical success and see a turnaround for the first time in
-        their history. (hinting they'll be shut down otherwise)
+        such requirements is to ensure Thibodeau Publishing, an affiliate of
+        Survoy Group International that reprint rare books and manuscripts,
+        remains operational within the new entity for at least 10 years. While
+        our friends at Thibodeau are immensely proud of their heritage in metal
+        type, we believe that the digital technology will become far more
+        prevalent in the near future. Therefore, we remain hopeful that with a
+        little help and technical know-how from my department, Thibodeau can
+        finally come up with a commerical success and see a turnaround for the
+        first time in their history. (hinting they'll be shut down otherwise)
       </p>
       <p>Some instructions on how to use it here</p>
       <br /><br />
