--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -33,19 +33,42 @@
         that we also have a publishing subdivision. When Pitchman Industries and
         Survoy Group International proposed a merger eight years ago, U.S.
         Department of Commerce and Canadian Chamber of Commerce imposed a few
-        conditions for the merger to clear, citing antitrust concerns. One of
-        such requirements is to ensure Thibodeau Publishing, an affiliate of
-        Survoy Group International that reprint rare books and manuscripts,
-        remains operational within the new entity for at least 10 years. While
-        our friends at Thibodeau are immensely proud of their heritage in metal
+        conditions for the merger to clear, citing antitrust concerns. While
+        most of these conditions pertain to divestiture, one requirement
+        stipulated that Thibodeau Publishing, an affiliate of Survoy Group
+        International that reprint rare books and manuscripts, would remain
+        operational within the new entity for at least 10 years. While our
+        friends at Thibodeau are immensely proud of their heritage in metal
         type, we believe that the digital technology will become far more
         prevalent in the near future. Therefore, we remain hopeful that with a
         little help and technical know-how from my department, Thibodeau can
         finally come up with a commerical success and see a turnaround for the
-        first time in their history. (hinting they'll be shut down otherwise)
+        first time in their history.
       </p>
-      <p>Some instructions on how to use it here</p>
-      <br /><br />
+      <p>
+        My team and our friends at Thibodeau went back and forth and landed on
+        the decision to convert every volume of Encyclopaedia Mundi in digital
+        form. Our initial market research indicated that we have to opt for an
+        aggresive compression rate so that our database can fit on the disk
+        space of an average target customer, but this also means that data needs
+        to be decompressed on the fly, and the result may not show up
+        instantaneously. However, we hope that the cost of purchasing high
+        capacity hard disk dirves can lower over time, we would be able to sell
+        a version with faster performance–albeit taking up more hard disk
+        space–as a future upgrade.
+      </p>
+      <p>
+        Lastly, I cannot be thankful enough for our friends at Thibodeau
+        Publishing. Our partnership has allowed us to digitize a majority of the
+        Encyclopaedia Mundi. Even though you may bump into a not-yet-digitized
+        article once in a while, rest assured that me and my colleagues are
+        working on it. If you happen to go on a business trip to Quebec (or as
+        they say it there, Québec), you need to allot some time to visit their
+        storage just to appreciate how much physical space those delicate
+        leather-bound books actually take up. If I had to be frank, our digital
+        version just doesn't do it justice in that regard. Yet.
+      </p>
+      <br />
       Regards,<br />Dave from Technical Evaluation & Advancement
     </div>
 
