Updated page structure

--- a/src/frames/index/2.html
+++ b/src/frames/index/2.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>UTP</title>
-    <link rel="stylesheet" href="frames-styles.css" />
+    <link rel="stylesheet" href="../frames-styles.css" />
   </head>
 
   <body>
-    <h1>Articles starting with Numbers</h1>
-    <div>Some of the articles that start with numbers:</div>
+    <h1>Articles starting with 2</h1>
+    <div>Some of the articles that start with 2:</div>
     <div>Anarchy</div>
     <div>Anchor</div>
     <div>Anne Boleyn</div>
