--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -63,8 +63,8 @@
         Encyclopaedia Mundi. Even though you may bump into a not-yet-digitized
         article once in a while, rest assured that me and my colleagues are
         working on it. If you happen to go on a business trip to Quebec (or as
-        they say it there, Québec), you need to allot some time to visit their
-        storage just to appreciate how much physical space those delicate
+        they say it up there, Québec), you need to allot some time to visit
+        their storage just to appreciate how much physical space those delicate
         leather-bound books actually take up. If I had to be frank, our digital
         version just doesn't do it justice in that regard. Yet.
       </p>
