--- a/src/frames/index/8.html
+++ b/src/frames/index/8.html
@@ -7,8 +7,8 @@
   </head>
 
   <body>
-    <h1>Articles starting with D</h1>
-    <div>Some of the articles that start with D:</div>
+    <h1>Articles starting with 8</h1>
+    <div>Some of the articles that start with 8:</div>
     <div>Anarchy</div>
     <div>Anchor</div>
     <div>Anne Boleyn</div>
