--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>UTP</title>
-    <link rel="stylesheet" href="frames-styles.css" />
+    <link rel="stylesheet" href="../frames-styles.css" />
   </head>
 
   <body>
     <h1>Articles starting with A</h1>
     <div>Some of the articles that start with A:</div>
-    <div>Anarchy</div>
+    <a href="./A/A0.html">Anarchy</a>
     <div>Anchor</div>
     <div>Anne Boleyn</div>
     <div>Appellation d'origine contrôlée</div>
     <div>Antimatter</div>
     <div>Azithromycin</div>
   </body>
+  <script>
+    const { ipcRenderer, remote } = require("electron");
+  </script>
 </html>
