--- a/src/frames/index/E.html
+++ b/src/frames/index/E.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>UTP</title>
-    <link rel="stylesheet" href="frames-styles.css" />
+    <link rel="stylesheet" href="../frames-styles.css" />
   </head>
 
   <body>
-    <h1>Articles starting with A</h1>
-    <div>Some of the articles that start with A:</div>
+    <h1>Articles starting with E</h1>
+    <div>Some of the articles that start with E:</div>
     <div>Anarchy</div>
     <div>Anchor</div>
     <div>Anne Boleyn</div>
