--- a/src/frames/index/G.html
+++ b/src/frames/index/G.html
@@ -7,8 +7,8 @@
   </head>
 
   <body>
-    <h1>Articles starting with A</h1>
-    <div>Some of the articles that start with A:</div>
+    <h1>Articles starting with G</h1>
+    <div>Some of the articles that start with G:</div>
     <div>Anarchy</div>
     <div>Anchor</div>
     <div>Anne Boleyn</div>
